--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="krajobraz">
-                    <a href="img/2.jpg" target="_blank">
+                    <a href="img/2.png" target="_blank">
                         <img src="img/2.thumbnail" alt="Krajobraz górski">
                     </a>
                     <div class="item-overlay">
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="architektura">
-                    <a href="img/3.jpg" target="_blank">
+                    <a href="img/3.png" target="_blank">
                         <img src="img/3.thumbnail" alt="Ulica nocą">
                     </a>
                     <div class="item-overlay">
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="architektura">
-                    <a href="img/4.jpg" target="_blank">
+                    <a href="img/4.png" target="_blank">
                         <img src="img/4.thumbnail" alt="Budynek architektury nowoczesnej">
                     </a>
                     <div class="item-overlay">
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="natura">
-                    <a href="img/5.jpg" target="_blank">
+                    <a href="img/5.png" target="_blank">
                         <img src="img/5.thumbnail" alt="Kwiat w zbliżeniu">
                     </a>
                     <div class="item-overlay">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="natura">
-                    <a href="img/6.jpg" target="_blank">
+                    <a href="img/6.png" target="_blank">
                         <img src="img/6.thumbnail" alt="Portret artystyczny">
                     </a>
                     <div class="item-overlay">
