Update: index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="gallery-grid" role="list">
                 <div class="gallery-item" data-category="portrety" role="listitem">
-                    <a href="img/1.jpg" data-lightbox="gallery" data-title="Portret w świetle - Sesja portretowa w naturalnym świetle" aria-label="Portret kobiety - otwórz w lightboxie">
+                    <a href="img_watermarked/1.jpg" data-lightbox="gallery" data-title="Portret w świetle - Sesja portretowa w naturalnym świetle" aria-label="Portret kobiety - otwórz w lightboxie">
                         <img src="img/1.thumbnail" alt="Portret kobiety w naturalnym świetle, sesja portretowa">
                     </a>
                     <div class="item-overlay">
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="krajobraz" role="listitem">
-                    <a href="img/2.png" data-lightbox="gallery" data-title="Górski Krajobraz - Świt w górach, naturalny krajobraz" aria-label="Górski krajobraz - otwórz w lightboxie">
+                    <a href="img_watermarked/2.png" data-lightbox="gallery" data-title="Górski Krajobraz - Świt w górach, naturalny krajobraz" aria-label="Górski krajobraz - otwórz w lightboxie">
                         <img src="img/2.thumbnail" alt="Górski krajobraz o świcie, naturalne światło">
                     </a>
                     <div class="item-overlay">
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="architektura" role="listitem">
-                    <a href="img/3.png" data-lightbox="gallery" data-title="Miejskie Światła - Nocne zdjęcie ulicy w centrum miasta" aria-label="Miejskie światła - otwórz w lightboxie">
+                    <a href="img_watermarked/3.png" data-lightbox="gallery" data-title="Miejskie Światła - Nocne zdjęcie ulicy w centrum miasta" aria-label="Miejskie światła - otwórz w lightboxie">
                         <img src="img/3.thumbnail" alt="Nocne zdjęcie ulicy w centrum miasta, oświetlenie miejskie">
                     </a>
                     <div class="item-overlay">
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="architektura" role="listitem">
-                    <a href="img/4.png" data-lightbox="gallery" data-title="Nowoczesna Architektura - Geometryczne formy współczesnej architektury" aria-label="Nowoczesna architektura - otwórz w lightboxie">
+                    <a href="img_watermarked/4.png" data-lightbox="gallery" data-title="Nowoczesna Architektura - Geometryczne formy współczesnej architektury" aria-label="Nowoczesna architektura - otwórz w lightboxie">
                         <img src="img/4.thumbnail" alt="Nowoczesny budynek z geometrycznymi formami architektonicznymi">
                     </a>
                     <div class="item-overlay">
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="natura" role="listitem">
-                    <a href="img/5.png" data-lightbox="gallery" data-title="Flora Detale - Makrofotografia roślin i kwiatów" aria-label="Flora detale - otwórz w lightboxie">
+                    <a href="img_watermarked/5.png" data-lightbox="gallery" data-title="Flora Detale - Makrofotografia roślin i kwiatów" aria-label="Flora detale - otwórz w lightboxie">
                         <img src="img/5.thumbnail" alt="Makrofotografia kwiatu, detale rośliny">
                     </a>
                     <div class="item-overlay">
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="gallery-item" data-category="natura" role="listitem">
-                    <a href="img/6.png" data-lightbox="gallery" data-title="Kolor i Emocje - Kreatywny portret w intensywnych kolorach" aria-label="Kolor i emocje - otwórz w lightboxie">
+                    <a href="img_watermarked/6.png" data-lightbox="gallery" data-title="Kolor i Emocje - Kreatywny portret w intensywnych kolorach" aria-label="Kolor i emocje - otwórz w lightboxie">
                         <img src="img/6.thumbnail" alt="Kreatywny portret z intensywnymi kolorami">
                     </a>
                     <div class="item-overlay">
