Add: Inspiracje link in footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <ul class="nav-links">
                     <li><a href="#" aria-current="page">Strona Główna</a></li>
                     <li><a href="#gallery">Portfolio</a></li>
+                    <li><a href="#inspiracje">Inspiracje</a></li>
                     <li><a href="#about">O Mnie</a></li>
+                    <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
                 <button class="mobile-menu-btn" aria-label="Otwórz menu mobilne" aria-expanded="false" aria-controls="mobile-nav">☰</button>
             </nav>
@@ -36,7 +38,9 @@
         <ul class="mobile-nav-links">
             <li><a href="#" aria-current="page">Strona Główna</a></li>
             <li><a href="#gallery">Portfolio</a></li>
+            <li><a href="#inspiracje">Inspiracje</a></li>
             <li><a href="#about">O Mnie</a></li>
+            <li><a href="#kontakt">Kontakt</a></li>
         </ul>
     </div>
 
@@ -138,6 +142,68 @@
         </div>
     </div>
 
+    <!-- Sekcja Portfolio -->
+    <section id="portfolio" class="portfolio">
+        <!-- ... existing code ... -->
+    </section>
+
+    <!-- Sekcja Inspiracje -->
+    <section id="inspiracje" class="portfolio">
+        <div class="container">
+            <h2>Inspiracje</h2>
+            <div class="filter-buttons">
+                <button class="filter-btn active" data-filter="wszystkie">Wszystkie</button>
+                <button class="filter-btn" data-filter="natura">Natura</button>
+                <button class="filter-btn" data-filter="architektura">Architektura</button>
+                <button class="filter-btn" data-filter="portret">Portret</button>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item" data-category="natura">
+                    <img src="img_watermarked/1.jpg" alt="Inspiracja 1 - Natura">
+                    <div class="item-overlay">
+                        <h3>Inspiracja 1</h3>
+                        <p>Natura</p>
+                    </div>
+                </div>
+                <div class="gallery-item" data-category="architektura">
+                    <img src="img_watermarked/2.png" alt="Inspiracja 2 - Architektura">
+                    <div class="item-overlay">
+                        <h3>Inspiracja 2</h3>
+                        <p>Architektura</p>
+                    </div>
+                </div>
+                <div class="gallery-item" data-category="portret">
+                    <img src="img_watermarked/3.png" alt="Inspiracja 3 - Portret">
+                    <div class="item-overlay">
+                        <h3>Inspiracja 3</h3>
+                        <p>Portret</p>
+                    </div>
+                </div>
+                <div class="gallery-item" data-category="natura">
+                    <img src="img_watermarked/4.png" alt="Inspiracja 4 - Natura">
+                    <div class="item-overlay">
+                        <h3>Inspiracja 4</h3>
+                        <p>Natura</p>
+                    </div>
+                </div>
+                <div class="gallery-item" data-category="architektura">
+                    <img src="img_watermarked/5.png" alt="Inspiracja 5 - Architektura">
+                    <div class="item-overlay">
+                        <h3>Inspiracja 5</h3>
+                        <p>Architektura</p>
+                    </div>
+                </div>
+                <div class="gallery-item" data-category="portret">
+                    <img src="img_watermarked/6.png" alt="Inspiracja 6 - Portret">
+                    <div class="item-overlay">
+                        <h3>Inspiracja 6</h3>
+                        <p>Portret</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Sekcja O Mnie -->
     <section id="about" class="about" aria-labelledby="about-title">
         <div class="container">
@@ -172,6 +238,7 @@
                     <h3>Linki</h3>
                     <a href="#" aria-current="page">Strona Główna</a>
                     <a href="#gallery">Portfolio</a>
+                    <a href="#inspiracje">Inspiracje</a>
                     <a href="#about">O Mnie</a>
                 </div>
                 <div class="footer-column">
