Fix: Add lightbox functionality to Inspiracje section

--- a/index.html
+++ b/index.html
@@ -159,42 +159,54 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item" data-category="natura">
-                    <img src="img_watermarked/1.jpg" alt="Inspiracja 1 - Natura">
+                    <a href="img_watermarked/1.jpg" data-lightbox="inspiracje" data-title="Inspiracja 1 - Natura">
+                        <img src="img/1.thumbnail" alt="Inspiracja 1 - Natura">
+                    </a>
                     <div class="item-overlay">
                         <h3>Inspiracja 1</h3>
                         <p>Natura</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="architektura">
-                    <img src="img_watermarked/2.png" alt="Inspiracja 2 - Architektura">
+                    <a href="img_watermarked/2.png" data-lightbox="inspiracje" data-title="Inspiracja 2 - Architektura">
+                        <img src="img/2.thumbnail" alt="Inspiracja 2 - Architektura">
+                    </a>
                     <div class="item-overlay">
                         <h3>Inspiracja 2</h3>
                         <p>Architektura</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="portret">
-                    <img src="img_watermarked/3.png" alt="Inspiracja 3 - Portret">
+                    <a href="img_watermarked/3.png" data-lightbox="inspiracje" data-title="Inspiracja 3 - Portret">
+                        <img src="img/3.thumbnail" alt="Inspiracja 3 - Portret">
+                    </a>
                     <div class="item-overlay">
                         <h3>Inspiracja 3</h3>
                         <p>Portret</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="natura">
-                    <img src="img_watermarked/4.png" alt="Inspiracja 4 - Natura">
+                    <a href="img_watermarked/4.png" data-lightbox="inspiracje" data-title="Inspiracja 4 - Natura">
+                        <img src="img/4.thumbnail" alt="Inspiracja 4 - Natura">
+                    </a>
                     <div class="item-overlay">
                         <h3>Inspiracja 4</h3>
                         <p>Natura</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="architektura">
-                    <img src="img_watermarked/5.png" alt="Inspiracja 5 - Architektura">
+                    <a href="img_watermarked/5.png" data-lightbox="inspiracje" data-title="Inspiracja 5 - Architektura">
+                        <img src="img/5.thumbnail" alt="Inspiracja 5 - Architektura">
+                    </a>
                     <div class="item-overlay">
                         <h3>Inspiracja 5</h3>
                         <p>Architektura</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="portret">
-                    <img src="img_watermarked/6.png" alt="Inspiracja 6 - Portret">
+                    <a href="img_watermarked/6.png" data-lightbox="inspiracje" data-title="Inspiracja 6 - Portret">
+                        <img src="img/6.thumbnail" alt="Inspiracja 6 - Portret">
+                    </a>
                     <div class="item-overlay">
                         <h3>Inspiracja 6</h3>
                         <p>Portret</p>
