Poprawiono marginesy w sekcji artykułów na urządzeniach mobilnych

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#" aria-current="page">Strona Główna</a></li>
                     <li><a href="#gallery">Portfolio</a></li>
                     <li><a href="#inspiracje">Inspiracje</a></li>
+                    <li><a href="#artykuly">Artykuły</a></li>
                     <li><a href="#about">O Mnie</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
@@ -39,6 +40,7 @@
             <li><a href="#" aria-current="page">Strona Główna</a></li>
             <li><a href="#gallery">Portfolio</a></li>
             <li><a href="#inspiracje">Inspiracje</a></li>
+            <li><a href="#artykuly">Artykuły</a></li>
             <li><a href="#about">O Mnie</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
         </ul>
@@ -216,6 +218,50 @@
         </div>
     </section>
 
+    <!-- Sekcja Artykuły -->
+    <section id="artykuly" class="articles">
+        <div class="container">
+            <h2>Artykuły</h2>
+            <div class="articles-grid">
+                <article class="article-card">
+                    <div class="article-content">
+                        <h3>Podstawy Kompozycji w Fotografii</h3>
+                        <p class="article-meta">Opublikowano: 15 kwietnia 2024</p>
+                        <p class="article-excerpt">Poznaj podstawowe zasady kompozycji, które pomogą Ci tworzyć bardziej interesujące i zrównoważone zdjęcia...</p>
+                    </div>
+                    <a href="articles/podstawy-kompozycji.html" class="article-link">Czytaj więcej →</a>
+                </article>
+
+                <article class="article-card">
+                    <div class="article-content">
+                        <h3>Światło w Fotografii Portretowej</h3>
+                        <p class="article-meta">Opublikowano: 10 kwietnia 2024</p>
+                        <p class="article-excerpt">Jak wykorzystać naturalne i sztuczne światło do tworzenia pięknych portretów...</p>
+                    </div>
+                    <a href="articles/swiatlo-w-portrecie.html" class="article-link">Czytaj więcej →</a>
+                </article>
+
+                <article class="article-card">
+                    <div class="article-content">
+                        <h3>Fotografia Krajobrazowa: Poradnik dla Początkujących</h3>
+                        <p class="article-meta">Opublikowano: 5 kwietnia 2024</p>
+                        <p class="article-excerpt">Praktyczne wskazówki dotyczące fotografowania krajobrazów w różnych warunkach oświetleniowych...</p>
+                    </div>
+                    <a href="articles/fotografia-krajobrazowa.html" class="article-link">Czytaj więcej →</a>
+                </article>
+
+                <article class="article-card">
+                    <div class="article-content">
+                        <h3>Post-Processing: Podstawy Edycji Zdjęć</h3>
+                        <p class="article-meta">Opublikowano: 1 kwietnia 2024</p>
+                        <p class="article-excerpt">Wprowadzenie do podstawowych technik edycji zdjęć w programach graficznych...</p>
+                    </div>
+                    <a href="articles/post-processing.html" class="article-link">Czytaj więcej →</a>
+                </article>
+            </div>
+        </div>
+    </section>
+
     <!-- Sekcja O Mnie -->
     <section id="about" class="about" aria-labelledby="about-title">
         <div class="container">
@@ -251,6 +297,7 @@
                     <a href="#" aria-current="page">Strona Główna</a>
                     <a href="#gallery">Portfolio</a>
                     <a href="#inspiracje">Inspiracje</a>
+                    <a href="#artykuly">Artykuły</a>
                     <a href="#about">O Mnie</a>
                 </div>
                 <div class="footer-column">
